修改了主页、关于、联系、新闻页面

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -283,7 +283,7 @@
                                     <i class="icofont-airplane-alt"></i>
                                 </div>
                                 <h4>物流优势</h4>
-                                <p>目前我公司代理直客进出口货物年度总额达2000万美金以上。</p>
+                                <p>我公司集成了专业外（商）贸公司和专业国际货运代理公司的优势，使得国际物流的综合业务都可以在我公司得以完整实现。</p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-md-6">
@@ -292,7 +292,7 @@
                                     <i class="icofont-truck-alt"></i>
                                 </div>
                                 <h4>规模优势</h4>
-                                <p>国内已经在天津、青岛、大连、上海、广州、深圳等各主要港口城市设有自己的办事处；国外在欧洲，美洲，澳洲，东南亚，中东等地都拥有自己的合作代理。</p>
+                                <p>目前我公司代理直客进出口货物年度总额达2000万美金以上。</p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-md-6">
