--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -111,8 +111,13 @@
             <div class="offset-widget mb-40 d-none d-lg-block">
                 <div class="info-widget">
                     <h4 class="offset-title mb-20 d-none">关于我们</h4>
-                    <p class="mb-30">上海大众物流有限公司系大众交通（集团）全资子公司，是上海城市配送行业骨干企业、上海市搬场行业
-                        五星级企业、上海市交通港口行业AAA级诚信企业、国家经贸委确定的全国34家重点推荐企业和交通部确定的全国18家快运试点企业。 </p>
+                    <p class="mb-30">北京中凯国际物流有限公司，是由北京首都科技集团进出口部、北京利凯国际货运有限公司和北京联合诚信科贸
+                        有限公司三方投资组建而成。我公司具有进出口代理经营权，国际货运一级代理
+                        资格，代理报关和代理报检权，拥有物流监管车队和中转仓库。我公司并被国税
+                        局认定为增值税一般纳税人资格，可从事商贸经营和出口退税。所以我公司集成
+                        了专业外（商）贸公司和专业国际货运代理公司的优势，使得国际物流的综合业
+                        务都可以在我公司得以完整实现；同时业务的综合性可以使得我们的客户得到全
+                        方位的精准服务。目前我公司代理直客进出口货物年度总额达2000万美金以上。 </p>
                     <a href="#" class="c-btn btn-round-02 d-none">联系我们</a>
                 </div>
             </div>
@@ -166,15 +171,15 @@
                     <h4>相关信息</h4>
                     <a href="#" class="">
                         <i class="fal fa-map-marker-alt"></i>
-                        <span>广东省广州市玉沙路金城国际大厦</span>
+                        <span>北京市顺义区顺平路580号航城广场B座602室</span>
                     </a>
-                    <a href="tel:088889797697" class="">
+                    <a href="tel:01064329142" class="">
                         <i class="fal fa-phone"></i>
-                        <span>0898-66889888</span>
+                        <span>010-64329142</span>
                     </a>
                     <a href="/cdn-cgi/l/email-protection#1b7a7f7672755b7f74767a727535787476" class="">
                         <i class="far fa-envelope"></i>
-                        <span><span class="__cf_email__" data-cfemail="2746434a4e496743484a464e490944484a">[12344521@163.com]</span></span>
+                        <span><span class="__cf_email__" data-cfemail="2746434a4e496743484a464e490944484a">finance002@linking.net.cn</span></span>
                     </a>
 
                 </div>
@@ -228,10 +233,6 @@
                                     data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home"
                                     aria-selected="true">总部
                             </button>
-                            <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab"
-                                    data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile"
-                                    aria-selected="false">子公司
-                            </button>
 
                         </div>
                     </nav>
@@ -247,7 +248,7 @@
                                             </div>
                                             <div class="office-address-meta">
                                                 <h5>公司地点</h5>
-                                                <span>广东省广州市玉沙路金城国际大厦</span>
+                                                <span>北京市顺义区顺平路580号航城广场B座602室</span>
                                             </div>
                                         </li>
                                         <li>
@@ -256,7 +257,7 @@
                                             </div>
                                             <div class="office-address-meta">
                                                 <h5>联系方式</h5>
-                                                <span><a href="tel:+96258625698569">0898-66889888</a></span>
+                                                <span><a href="tel:01064329142">010-64329142</a></span>
                                             </div>
                                         </li>
                                         <li>
@@ -268,7 +269,7 @@
                                                 <span><a
                                                         href="/cdn-cgi/l/email-protection#31585f575e714654535449505c415d541f525e5c"><span
                                                         class="__cf_email__"
-                                                        data-cfemail="244d4a424b64534146415c45495448410a474b49">[12344521@163.com]</span></a></span>
+                                                        data-cfemail="244d4a424b64534146415c45495448410a474b49">finance002@linking.net.cn</span></a></span>
                                             </div>
                                         </li>
                                     </ul>
@@ -280,74 +281,31 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="nav-profile" role="tabpanel"
-                             aria-labelledby="nav-profile-tab">
-                            <div class="row g-0">
-                                <div class="col-lg-5">
-                                    <ul class="office-address">
-                                        <li>
-                                            <div class="office-address-icon">
-                                                <i class="flaticon-map"></i>
-                                            </div>
-                                            <div class="office-address-meta">
-                                                <h5>公司地点</h5>
-                                                <span>广东省广州市玉沙路金城国际大厦</span>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="office-address-icon">
-                                                <i class="flaticon-call"></i>
-                                            </div>
-                                            <div class="office-address-meta">
-                                                <h5>联系方式</h5>
-                                                <span><a href="tel:+96258625698569">0898-66889888</a></span>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="office-address-icon">
-                                                <i class="flaticon-envelope"></i>
-                                            </div>
-                                            <div class="office-address-meta">
-                                                <h5>企业邮箱</h5>
-                                                <span><a
-                                                        href="/cdn-cgi/l/email-protection#31585f575e714654535449505c415d541f525e5c"><span
-                                                        class="__cf_email__"
-                                                        data-cfemail="244d4a424b64534146415c45495448410a474b49">[12344521@163.com]</span></a></span>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="col-lg-7">
-                                    <div class="office-img">
-                                        <img id="office-img2" src="assets/img/about/office-img2.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- contact map area start  -->
-    <div>
-        <form method="post" id="searchForm" th:action="@{/oth/searchWaybill}">
-            <div class="g-5">
-                <div class="product__data">
-                    <div class="col-lg-4" style="width: 42%; float: left; margin: 4%; margin-bottom: 5px;">
-                        <input type="text" name="phone" value="发件人手机号" placeholder="发件人手机号">
-                    </div>
-                    <div class="col-lg-4" style="width: 42%; float: right; margin: 4%; margin-bottom: 5px;">
-                        <input type="text" name="wbNum" value="运单号" placeholder="运单号">
-                    </div>
-                    <button type="submit" class="request-quote shutter-btn">查询运单</button>
-                </div>
-            </div>
-        </form>
+<!--    &lt;!&ndash; contact map area start  &ndash;&gt;-->
+<!--    <div>-->
+<!--        <form method="post" id="searchForm" th:action="@{/oth/searchWaybill}">-->
+<!--            <div class="g-5">-->
+<!--                <div class="product__data">-->
+<!--                    <div class="col-lg-4" style="width: 42%; float: left; margin: 4%; margin-bottom: 5px;">-->
+<!--                        <input type="text" name="phone" value="发件人手机号" placeholder="发件人手机号">-->
+<!--                    </div>-->
+<!--                    <div class="col-lg-4" style="width: 42%; float: right; margin: 4%; margin-bottom: 5px;">-->
+<!--                        <input type="text" name="wbNum" value="运单号" placeholder="运单号">-->
+<!--                    </div>-->
+<!--                    <button type="submit" class="request-quote shutter-btn">查询运单</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </form>-->
 
 
-    </div>
-    <!-- contact map area end -->
+<!--    </div>-->
+<!--    &lt;!&ndash; contact map area end &ndash;&gt;-->
 </main>
 
 
