--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -194,7 +194,7 @@
                     </a>
                     <a href="/cdn-cgi/l/email-protection#1b7a7f7672755b7f74767a727535787476" class="">
                         <i class="far fa-envelope"></i>
-                        <span><span class="__cf_email__" data-cfemail="2746434a4e496743484a464e490944484a">[finance002@linking.net.cn]</span></span>
+                        <span><span class="__cf_email__" data-cfemail="2746434a4e496743484a464e490944484a">finance002@linking.net.cn</span></span>
                     </a>
 
                 </div>
