--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -108,8 +108,13 @@
                 <div class="offset-widget mb-40 d-none d-lg-block">
                     <div class="info-widget">
                         <h4 class="offset-title mb-20 d-none">关于我们</h4>
-                        <p class="mb-30">上海大众物流有限公司系大众交通（集团）全资子公司，是上海城市配送行业骨干企业、上海市搬场行业
-                            五星级企业、上海市交通港口行业AAA级诚信企业、国家经贸委确定的全国34家重点推荐企业和交通部确定的全国18家快运试点企业。 </p>
+                        <p class="mb-30">北京中凯国际物流有限公司，是由北京首都科技集团进出口部、北京利凯国际货运有限公司和北京联合诚信科贸
+                            有限公司三方投资组建而成。我公司具有进出口代理经营权，国际货运一级代理
+                            资格，代理报关和代理报检权，拥有物流监管车队和中转仓库。我公司并被国税
+                            局认定为增值税一般纳税人资格，可从事商贸经营和出口退税。所以我公司集成
+                            了专业外（商）贸公司和专业国际货运代理公司的优势，使得国际物流的综合业
+                            务都可以在我公司得以完整实现；同时业务的综合性可以使得我们的客户得到全
+                            方位的精准服务。目前我公司代理直客进出口货物年度总额达2000万美金以上。 </p>
                         <a href="#" class="c-btn btn-round-02 d-none">联系我们</a>
                     </div>
                 </div>
@@ -164,15 +169,15 @@
                         <h4>相关信息</h4>
                         <a href="#" class="">
                             <i class="fal fa-map-marker-alt"></i>
-                            <span>广东省广州市玉沙路金城国际大厦</span>
+                            <span>北京市顺义区顺平路580号航城广场B座602室</span>
                         </a>
-                        <a href="tel:088889797697" class="">
+                        <a href="tel:01064329142" class="">
                             <i class="fal fa-phone"></i>
-                            <span>0898-66889888</span>
+                            <span>010-64329142</span>
                         </a>
                         <a href="/cdn-cgi/l/email-protection#1b7a7f7672755b7f74767a727535787476" class="">
                             <i class="far fa-envelope"></i>
-                            <span><span class="__cf_email__" data-cfemail="2746434a4e496743484a464e490944484a">[12344521@163.com]</span></span>
+                            <span><span class="__cf_email__" data-cfemail="2746434a4e496743484a464e490944484a">finance002@linking.net.cn</span></span>
                         </a>
 
                     </div>
@@ -235,11 +240,7 @@
                                         <li><i class="fal fa-calendar-alt"></i>2015-11-09</li>
                                     </ul>
                                     <span class="b-tag">商业</span>
-                                    <div class="n-blog__author">
-                                        <a href="team-details.html"><img class="blog-author1" src="assets/img/news/blog-author1.jpg"
-                                                alt=""></a>
-                                        <span>by <a href="team-details.html">小明</a></span>
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="n-blog__single mb-40">
@@ -259,11 +260,7 @@
                                         <li><i class="fal fa-calendar-alt"></i>2015-11-09</li>
                                     </ul>
                                     <span class="b-tag">商业</span>
-                                    <div class="n-blog__author">
-                                        <a href="team-details.html"><img class="blog-author1" src="assets/img/news/blog-author1.jpg"
-                                                alt=""></a>
-                                        <span>by <a href="team-details.html">小明</a></span>
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="n-blog__single mb-40">
@@ -281,11 +278,7 @@
                                         <li><i class="fal fa-calendar-alt"></i>2015-11-09</li>
                                     </ul>
                                     <span class="b-tag">商业</span>
-                                    <div class="n-blog__author">
-                                        <a href="team-details.html"><img class="blog-author1" src="assets/img/news/blog-author1.jpg"
-                                                alt=""></a>
-                                        <span>by <a href="team-details.html">小明</a></span>
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="n-quote">
@@ -318,30 +311,11 @@
                     <div class="col-lg-4">
                         <div class="news-sidebar">
                             <div class="row">
+
                                 <div class="col-lg-12 col-md-12">
                                     <div class="n-sidebar-widget">
                                         <div class="sidebar-title">
-                                            <h4><span>01.</span> 关于我</h4>
-                                        </div>
-                                        <div class="featured-author text-center">
-                                            <a href="team-details.html"><img id="f-author" src="assets/img/news/f-author.jpg"
-                                                    alt=""></a>
-                                            <h6><a href="team-details.html">小明</a></h6>
-                                            <p>资深媒体人、新闻工作者</p>
-                                            <ul class="featured-author-social">
-                                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                                                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 col-md-12">
-                                    <div class="n-sidebar-widget">
-                                        <div class="sidebar-title">
-                                            <h4><span>02.</span> 查找</h4>
+                                            <h4><span>01.</span> 查找</h4>
                                         </div>
                                         <div class="n-sidebar-search">
                                             <input type="text" placeholder="输入关键字...">
@@ -352,7 +326,7 @@
                                 <div class="col-lg-12 col-md-12">
                                     <div class="n-sidebar-widget">
                                         <div class="sidebar-title">
-                                            <h4><span>03.</span> 热度榜</h4>
+                                            <h4><span>02.</span> 热度榜</h4>
                                         </div>
                                         <div class="n-sidebar-feed">
                                             <ul>
