修改了公司前台页面

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -224,8 +224,8 @@
                         <span>想要运输物品到任意地点？</span>
                         <h2 class="hero__title-2">运输业务正在进行中 </h2>
                         <div class="hero__btn">
-                            <a href="contact.html" class="v-btn mr-20">查询报价 <i
-                                    class="fal fa-arrow-alt-right"></i></a>
+<!--                            <a href="contact.html" class="v-btn mr-20">查询报价 <i-->
+<!--                                    class="fal fa-arrow-alt-right"></i></a>-->
                             <a href="about.html" class="link-btn">了解更多</a>
                         </div>
                     </div>
@@ -305,7 +305,7 @@
                                             <a href="">空运</a>
                                         </h3>
                                         <p>用最快的速度运输您的货物</p>
-                                        <a href="" class="link-btn-2">了解更多</a>
+                                        <a href="services-freight.html" class="link-btn-2">了解更多</a>
                                     </div>
                                 </div>
                             </div>
@@ -340,7 +340,7 @@
                                             <a href="">航运</a>
                                         </h3>
                                         <p>跨越大洋的运输线</p>
-                                        <a href="" class="link-btn-2">了解更多</a>
+                                        <a href="services-freight.html" class="link-btn-2">了解更多</a>
                                     </div>
                                 </div>
                             </div>
@@ -375,7 +375,7 @@
                                             <a href="">陆运</a>
                                         </h3>
                                         <p>我们的陆运汽车 7x24 小时全天候工作</p>
-                                        <a href="" class="link-btn-2">了解更多</a>
+                                        <a href="services-freight.html" class="link-btn-2">了解更多</a>
                                     </div>
                                 </div>
                             </div>
@@ -509,7 +509,7 @@
                                 <div class="project__img-content project__img-content-2">
                                     <div class="project__img-content-inner">
 
-                                        <h4><a href="">综合货运</a></h4>
+                                        <h4><a href="">理货检验</a></h4>
                                     </div>
                                     <a id="project-1a" href="assets/img/projects/01/project-1.jpg"
                                        class="project-search popup-image"><i
@@ -537,7 +537,7 @@
                                 <div class="project__img-content project__img-content-2">
                                     <div class="project__img-content-inner">
 
-                                        <h4><a href="">理货检验</a></h4>
+                                        <h4><a href="">综合货运</a></h4>
                                     </div>
                                     <a id="project-4a" href="assets/img/projects/01/project-4.jpg"
                                        class="project-search popup-image"><i
@@ -649,7 +649,7 @@
                             <h4><a href="">吴清一教授参观我司正中集... </a></h4>
                             <p>
                                 2015年8月24日，原北京科技大学教授、物流研究所所长吴清一教授在张永清、徐峰两位副总裁的陪同下来到位于...</p>
-                            <a href="">查看详情</a>
+                            <a href="news.html">查看详情</a>
                         </div>
                     </div>
                 </div>
@@ -668,7 +668,7 @@
                             <h4><a href="">智能制造今天国际亮相上海... </a></h4>
                             <p>
                                 8月26日，第七届中国（上海）国际锂电工业展览会在上海新国际博览中心隆重开幕，展览为期三天，今天国际...</p>
-                            <a href="">查看详情</a>
+                            <a href="news.html">查看详情</a>
                         </div>
                     </div>
                 </div>
@@ -689,7 +689,7 @@
                             </h4>
                             <p>
                                 鉴于今天国际的优良信誉及良好的发展前景，中国银行深圳分行将我司列为分行级重点客户。2015年7月31日，中...</p>
-                            <a href="">查看详情</a>
+                            <a href="news.html">查看详情</a>
                         </div>
                     </div>
                 </div>
