修改了公司前台页面

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -488,7 +488,7 @@
 
 
 
-    <!-- users area start  -->
+    <!-- user area start  -->
     <section class="users__area pt-100 pb-70 grey-bg">
         <div class="container">
             <div class="row wow slideInUp">
